exam/9.nginx-controller/3.app-test-ingress-ssl.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: guestbook-ingress
  namespace: nginx-ingress
spec:
  rules:
  - host: frontend.minikube.local
    http:
      paths:
      - path: /
        pathType: Prefix  
        backend:
          service:
            name: http-test-svc 
            port:
              number: 80
  - host: backend.minikube.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-test-svc 
            port:
              number: 80
